# signature

./: .gitignore  CMakeLists.txt  builder.sh  cleaner.sh
src/: buffered_reader.cpp  buffered_writer.cpp  hash_generator.cpp  input.cpp  main.cpp  progress_bar.cpp  thread_pool.cpp
src/include/: buffered_reader.h  buffered_writer.h  custom_exceptions.h  hash_generator.h  input.h  progress_bar.h  thread_pool.h
